--- a/WebRoot/css/seat.css
+++ b/WebRoot/css/seat.css
@@ -19,10 +19,15 @@ table p{
 form {
     padding: 90px;
 }
-table {
+.happy {
     border-radius: 5px;
     box-shadow: 0px 0px 20px #555;
     padding: 50px;
     margin: auto;
     background: rgba(255, 255, 255, 0.85);
+}
+
+.unhappy{
+	margin:auto;
+	
 }
